--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,6 +44,7 @@ file.reference.hibernate-core-6.4.4.Final.jar=libs\\hibernate-core-6.4.4.Final.j
 file.reference.hibernate-entitymanager-5.6.15.Final.jar=libs\\hibernate-entitymanager-5.6.15.Final.jar
 file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=libs\\hibernate-jpa-2.0-api-1.0.1.Final.jar
 file.reference.hibernate-validator-8.0.1.Final.jar=libs\\hibernate-validator-8.0.1.Final.jar
+file.reference.icepdf-core.jar=libs\\icepdf-core.jar
 file.reference.icepdf-viewer.jar=libs\\icepdf-viewer.jar
 file.reference.istack-commons-runtime-4.0.1.jar=libs\\istack-commons-runtime-4.0.1.jar
 file.reference.itext-2.1.7.jar=libs\\itext-2.1.7.jar
@@ -62,6 +63,7 @@ file.reference.jakarta.transaction-api-2.0.0.jar=libs\\jakarta.transaction-api-2
 file.reference.jakarta.validation-api-3.0.2.jar=libs\\jakarta.validation-api-3.0.2.jar
 file.reference.jakarta.xml.bind-api-3.0.1.jar=libs\\jakarta.xml.bind-api-3.0.1.jar
 file.reference.jandex-2.4.2.Final.jar=libs\\jandex-2.4.2.Final.jar
+file.reference.javax.persistence-api-2.2.jar=libs\\javax.persistence-api-2.2.jar
 file.reference.jaxb-core-3.0.2.jar=libs\\jaxb-core-3.0.2.jar
 file.reference.jaxb-runtime-3.0.2.jar=libs\\jaxb-runtime-3.0.2.jar
 file.reference.jboss-logging-3.4.3.Final.jar=libs\\jboss-logging-3.4.3.Final.jar
@@ -72,6 +74,8 @@ file.reference.jstl-1.2.jar=libs\\jstl-1.2.jar
 file.reference.lombok-1.18.18.jar=libs\\lombok-1.18.18.jar
 file.reference.mysql-connector-j-8.0.32.jar=libs\\mysql-connector-j-8.0.32.jar
 file.reference.mysql-connector-java-8.0.25.jar=libs\\mysql-connector-java-8.0.25.jar
+file.reference.pdfbox-3.0.0.jar=libs\\pdfbox-3.0.0.jar
+file.reference.pdfbox-app-3.0.0.jar=libs\\pdfbox-app-3.0.0.jar
 file.reference.persistence-api-1.0.2.jar=libs\\persistence-api-1.0.2.jar
 file.reference.protobuf-java-3.21.9.jar=libs\\protobuf-java-3.21.9.jar
 file.reference.servlet-api-2.5.jar=libs\\servlet-api-2.5.jar
@@ -123,7 +127,11 @@ javac.classpath=\
     ${file.reference.slf4j-api-2.0.9.jar}:\
     ${file.reference.spring-boot-starter-web-3.0.10.jar}:\
     ${file.reference.txw2-3.0.2.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.icepdf-core.jar}:\
+    ${file.reference.javax.persistence-api-2.2.jar}:\
+    ${file.reference.pdfbox-3.0.0.jar}:\
+    ${file.reference.pdfbox-app-3.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
